# projectartemis

./: .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
backend/: apply_schema.py  main.py  pyproject.toml  test_supabase.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  auth.py  communication.py  discovery.py  health.py  legal.py  media.py  rank.py  safety.py  verification.py
backend/app/core/: config.py  discovery.py  ranking.py
backend/app/db/: schema.sql  supabase.py
backend/app/models/: legal.py  match.py  user.py
backend/app/services/: aadhaar.py  backfill_service.py  cohere_ai.py  rank_service.py
backend/supabase/migrations/: 20260403_blueprint_alignment.sql  20260403_init_schema.sql  20260403_referral_points_system.sql
public/: ads.txt  robots.txt
pwa/: index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
pwa/src/: App.tsx  index.css  main.tsx
src/: App.tsx  index.css  main.tsx
src/components/: AadhaarVerification.tsx  Background.tsx  CameraCapture.tsx  ChatRoom.tsx  CitySelector.tsx  DashboardLayout.tsx  DiscoveryCard.tsx  EditProfile.tsx  FAQ.tsx  GlassSurface.css  MagicBento.css  MagicChat.tsx  MatriarchLogo.tsx  Onboarding.tsx  ProfileDashboard.tsx  SanctuaryInbox.tsx  SeekerBrowse.tsx  ShinyText.tsx  SovereignBrowsing.tsx  SovereignPlasma.tsx  VerificationPrompt.tsx
src/data/: dummyProfiles.ts
src/hooks/: useAuth.ts  useSessionPulse.ts
src/lib/: cloudinary.ts  image-utils.ts  messaging.ts  setup_messaging.ts  supabase.ts  (+1 more)
(+55 files in other folders)
